# dsoi_lab_2

./: docker-compose.yml
.github/workflows/: classroom.yml
src/bonus/: CMakeLists.txt  Dockerfile  conanfile.txt
src/bonus/src/: main.cpp
src/bonus/src/api/: BonusController.cpp  BonusController.hpp
src/bonus/src/database/: BonusRepository.cpp  BonusRepository.hpp
src/bonus/src/models/: Privilege.hpp  PrivilegeHistory.hpp
src/flight/: CMakeLists.txt  Dockerfile
src/flight/src/: main.cpp
src/flight/src/api/: FlightController.cpp  FlightController.h
src/flight/src/database/: FlightRepository.cpp  FlightRepository.h
src/flight/src/models/: Airport.h  Flight.h
src/gateway/: CMakeLists.txt  Dockerfile  conanfile.txt
src/gateway/src/: main.cpp
src/gateway/src/api/: GatewayController.cpp  GatewayController.hpp
src/ticket/: CMakeLists.txt  Dockerfile
src/ticket/src/: main.cpp
src/ticket/src/api/: TicketController.cpp  TicketController.hpp
src/ticket/src/database/: TicketRepository.cpp  TicketRepository.hpp
src/ticket/src/models/: Ticket.hpp
src/ticket/src/utils/: UUIDGenerator.cpp  UUIDGenerator.hpp
